Navbar with country birthdate placeholders; Modal.scss fixing overflow issue for update user.

--- a/client/src/components/Modal/Modal.scss
+++ b/client/src/components/Modal/Modal.scss
@@ -32,6 +32,8 @@
             }
 
             .modal-body {
+              overflow: scroll;
+              max-height: 500px;
                 padding: 20px;
                 background-color: white;
                 text-align: left;
